app/assets/stylesheets/mohican/mohican.css.scss
/*
*= require_tree ./includes
*/

@import "bootstrap-sprockets";
@import "bootstrap";
@import "mn-config";
@import "font-awesome-sprockets";
@import "font-awesome";
@import "rails_bootstrap_forms";

// Following should be commented when wanting to show demo features.
// It should not be removed.
.demo-feature {
  display: none;
}


// mixins
// basic bootstrap "buttonizer" for overrinding existing vendor component style
@mixin bs-btnize($variant) {
  @extend .btn;
  @extend .btn-#{$variant};
}

// TODO: why different size of buttons? Why all this?????
// reseting positioning & box model for isteven-multi-select existing vendor component style
@mixin multi-select-reset-pbm($pad,$lmargin) {
  padding: $pad + px ($pad * 4) + px $pad + px ($pad * 4) + px; // compensate for the inner .multiSelect .buttonLabel padding
  margin-left: $lmargin + px;
}

.success .multiSelect button {
  @include multi-select-reset-pbm(2,2);
  @include bs-btnize("success");
}

.primary .multiSelect button {
  @include multi-select-reset-pbm(1,5);
  @include bs-btnize("primary");
}

/* title bar logo */
a.navbar-brand {
  width:$mn-brand-width;
  background:$mn-brand-bg;
}

/////////////////////////////////////////
//
// All the CSS for the grid (not footer, but yes qf bar)
// should be inside the following selector
//
.mn-grid {
  ///////////////////////////////////////
  // Align grid data when idle and when being editied.
  // This makes the text not move when editing starts but theinput simply appears around it.
  overflow:auto;

  .table > thead > tr.mn-grid-header > th {
    border-bottom: none;
  }
  .mn-grid-data-row {
    height: 45px;
    .input-sm {
      margin-top: -8px;
    }
    .btn-link {
      padding-bottom: 0px;
    }
  }

  .mnf-grid-field-editing {
    padding-top: 1px;
    input {
      height: 26px !important;
      padding: 5px 12px !important;
      margin-top: 1px;
    }
  }
  .mnf-grid-field-ready {
    padding-top: 5px;
    padding-left: 13px;
  }
  .mnf-grid-ref-field-editing {
    padding-top: 1px;
    padding-left: 13px;
    .mnf-grid-field-editing-text{
      div {
        display: inline;
        margin-top: 2px;
        position: relative;
        top: 3px;
      }
      display: inline;
      position: relative;
    }

    .mnf-grid-field-editing-button-wrap {
      display: inline;
      padding-top: 0px;
      .btn {
        padding-top: 3px;
      }
    }
  }
  .mn-grid-select-box {
    margin-top: 10px !important;
    font-size:$font-size-base * 3;
  }

  .qf-row, .table > thead > tr th.qf-row {
    padding: 2px 1px 4px 1px !important;
    border: none !important;
    vertical-align: middle;
    .multiSelect {
      button {
        max-width: 100%;
        overflow: hidden;
        text-overflow: ellipsis;
        div {

        }
      }
    }
  }

  .filterFieldBgWrap {
    position:relative;
    width:100%;
    z-index: 200;
  }

  tr.last-selected {
    border-left-color: blue;
    border-left-style: solid;
    border-left-width: medium;
  }
  tr.deleted {
    color: red;
  }
} // .mn-grid

.btn-toolbar {
  margin-bottom: $mn-filter-bar-btmPad;
}

.notifications-holder {
  // overflow-y: scroll;
  // height: 500px;
}

mnf-form, mnf-form-grid {
  .changed {
    background-color: yellow;
  }
}

mnf-form {
  .mn-form-group {
    margin-bottom: 0px;
  }

  .mn-form-control {
    font-size: 14px !important;
  }

  .mn-buttons-group {
    margin-bottom: 5px;
  }

  .state-ready-field-value {
    height: 30px;
    padding-left: 26px;
    padding-top: 5px;
    padding-bottom: 5px;
  }

  .state-ready-field-value i {
    font-size: 1.6em;
  }

  mnf-reference {
    .padding-top-0 {
      padding-top: 0px !important;
    }

    .btn-link {
      padding: 0px;
      padding-right: 17px;
      padding-left: 11px;
    }

    .ref-container {
      margin-left: -11px;
      margin-right: 0px;
      padding-top: 2px;
    }

    .ref-edit-label {
      padding-top: 3px;
      padding-left: 11px;
    }
  }
} //mnf-form

.mnf-reference-dialog-container {
  max-width: 1100px;
  .ref-dialog-close-btn {
    margin-top: 5px;
  }
}

.mn-action-icon {
  cursor: pointer;
  color: black;
}

////////////////////////////////////
//
// Following makes sure pointer cursor is shown on elements that are link-like
.nav,
.carousel,
.panel-title a,
.pointer,
[ng-click],
[data-ng-click],
[x-ng-click] {
    cursor: pointer;
}

///////////////////////////////////
// TODO: replace following with Bootstrap classes rather than own.
.icoNormal {
  color: $mn-filter-bar-button-active-text-color !important;
  padding: 0px 1px 0px 1px;
  &:hover, &:active {
  color: #999 !important;
  }
}

.hvRed:hover, .hvRed:active {
  color: #e53935 !important;
}

.hvGreen:hover, .hvGreen:active {
  color: #2e7d32 !important;
}

.hvBlue:hover, .hvBlue:active {
  color: #0089E2 !important;
}
//////////////////////////////////////

.mn-context-menu-cover, .mn-dialog-frame-cover {
  position:fixed;
  top:0;
  left:0;
  width:100%;
  height:100%;
  background:rgba(0,0,0,0);
  z-index:1998;
  cursor:default;
}

.mn-dialog-frame-cover {
  background:rgba(0,0,0,0.6);
}

.mn-dialog-frame {
  position:fixed;
  z-index:1999;
  * {
    z-index:9999;
    position:relative;
  }
  .mn-dialog-content {
    padding: 30px 45px;
  }
}

.mn-dialog-close-button {
  position:absolute;
  top:0px;
  right:0px;
  width:30px;
  height:30px;
  // margin-top: 10px;
  // margin-right: 10px;
  color: silver;
  z-index:2999;
}

.mn-context-menu {
  position: absolute;
  z-index:999999;
  &> .btn-default {
    color: $mn-popup-menu-color;
    background-color: $mn-popup-menu-background-color;
    border-color: $mn-popup-menu-border-color;
    &:hover {
      color: $mn-popup-menu-color-hover;
      background-color: $mn-popup-menu-background-color-hover;
      border-color: $mn-popup-menu-border-color-hover;
    }
  }
}

.mn-pager-row {
  padding-top: 7px;
  margin: 0 !important;
  .grid-footer-bar-filter-icon {
    font-size:$font-size-base * 1.5;
  }
}

.mn-content-footer-status-msg {
  padding-right:42px;
  color:$mn-colorscheme-1P;
  font-size:24px;
  font-weight:bolder;
  vertical-align: bottom;
  text-align: right;
}

.mn-content-footer-status-msg-invert {
  color:$mn-colorscheme-1D;
}

.pager-shows-filter {
    border-color: $state-warning-text;
    border-style: solid;
    border-width: 1px;
}

.page-not-found-image {
  background: $mn-404-bg;
  height: 400px;
  weight: 400px;
}

///////////////////////////////////////////
//
// Mohican BS dialog - max height to fit and scrolling
// See also modalFitInWindow which sets max-height on .modal-body element.
//
.modal-dialog {
  .modal-content {
    .modal-header {}
    .modal-body { overflow-y: auto; }
    .modal-footer {}
  }
}

